@@ -16,8 +16,9 @@
     <title>INTER-Mediator - Sample - Authorized Media Handling/MySQL</title>
     <link type="text/css" rel="stylesheet" href="../sample.css">
     <script type="text/javascript" src="contexts_MySQL.php"></script>
+    <script type="text/javascript" src="list_detail.js"></script>
 </head>
-<body onload="INTERMediator.construct()">
+<body>
 <!-- Table for the list view -->
 <div id="listarea">
     <table border="1">
