@@ -16,8 +16,9 @@
     <title>INTER-Mediator - Sample - Form Style/MySQL</title>
     <link rel="stylesheet" type="text/css" href="../sample.css">
     <script type="text/javascript" src="include_MySQL.php"></script>
+    <script type="text/javascript" src="search.js"></script>
 </head>
-<body onload="INTERMediator.construct()">
+<body>
 <div>
     地名(Place Name):
     <input type="text" data-im="_@condition:postalcode:f9:*match*"/>
